2013-11-06  Niibe Yutaka  <gniibe@fsij.org>

	* Version 0.0.
